# RobotJudge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  docker-compose.yml  pyproject.toml  render.yaml  requirement.md  requirements.txt  setup.bat  submit_flaky.py
.github/workflows/: judge.yml
baselines/: astar.py  bfs.py  dijkstra.py
configs/: public_suite.yaml
docs/: WINDOWS_SETUP.md  analysis_and_roadmap.md  ci_speech.md  detailed_project_description.md  how_it_works_simple.md  ieee_prototype_section.md  ieee_prototype_section_v2.md  requirement_checklist.md  scoring.md  submission.md
paper/: main.tex
reports/: report.md  results.json  test_bfs.json
reports/baseline/: report.md  results.json
reports/ci_check/: report.md  results.json
reports/ci_det1/: report.md  results.json
reports/ci_det2/: report.md  results.json
reports/det1/: report.md  results.json
reports/det2/: report.md  results.json
reports/det3/: report.md  results.json
reports/det4/: report.md  results.json
reports/logs/: easy_0000_seed1_path.json  easy_0000_seed3_path.json  easy_0000_seed4_path.json  easy_0001_seed1_path.json  easy_0001_seed3_path.json  (+268 more)
robotjudge/: __init__.py  cli.py  generator.py  grader.py  report.py  runner.py  schema.py
schemas/: case.schema.json  path.schema.json  results.schema.json
scripts/: check_determinism.py  gen_checklist_pdf.py  gen_pdf.py  gen_pdf_from_md.py  seed_db.py  test_web.py
submissions/: flaky_solver.py  template_solver.py  tle_solver.py
tests/: test_schema.py
web/: database.py  server.py
(+866 files in other folders)
