[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotjudge"
version = "1.0.0"
description = "RobotJudge-CI: Auto-grading judge for GridPath submissions"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.20,<5",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
robotjudge = "robotjudge.cli:main"

[tool.setuptools.packages.find]
include = ["robotjudge*"]
